--- a/瀚海22服务器使用技巧.md
+++ b/瀚海22服务器使用技巧.md
@@ -49,6 +49,8 @@ sc.settings.set_figure_params(dpi=100,dpi_save=300,facecolor='white',fontsize=10
 
 ## 自动ssh连接脚本
 
+**需要自行设置中英文输入法切换快捷键**
+
 **Windows**
 
 ```VBscript
